# ordered-containers

./: .envrc  ordered-containers.cabal
Data/MultiMap/Ordered/: Strict.hs
test/Data/MultiMap/Ordered/: StrictSpec.hs
